--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ margin: 0;
 }
 .slider .list .item img{
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
 }
 .slider .list .item::after{
@@ -510,6 +510,8 @@ margin: 0;
     }
     .slider .list .item img{
         object-fit: cover;
+        width: 100%;
+        height: auto;
     }
 }
 /* Models section*/
