--- a/style.css
+++ b/style.css
@@ -375,6 +375,12 @@ margin: 0;
     position: relative;
   color: white;
 }
+.slider .mercedes{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
 .slider .list .item{
     position: absolute;
     inset: 0 0 0 0;
