--- a/style.css
+++ b/style.css
@@ -377,9 +377,9 @@ margin: 0;
 }
 .slider .mercedes{
     position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 .slider .list .item{
     position: absolute;
