--- a/style.css
+++ b/style.css
@@ -375,10 +375,12 @@ margin: 0;
     position: relative;
   color: white;
 }
-.slider .mercedes{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+ .slider #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 .slider .list .item{
     position: absolute;
