--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ margin: 0;
   color: white;
 }
  .slider #myVideo {
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   min-width: 100%;
