--- a/style.css
+++ b/style.css
@@ -7,40 +7,6 @@ body{
   background: black;
     
 }
-/* VinC logo*/
-/*.dancing{
-  display: flex;
-  font-weight: bold;
-  color: white;
-  background-image: linear-gradient(to right, #1743e3, #f9004d);
-  border-radius: 10px;
-  border: 2px solid transparent;
-}
-.dancing span{
-  display: inline-block;
-  font-size: 30px;
-  animation: dance 1s infinite alternate;
-}
-@keyframes dance{
-  0%{
-    transform: rotate(0deg);
-  }
-  100%{
-    transform: rotate(360deg);
-  }
-}
-.dancing span:nth-child(1){
-  animation-delay: 0s;
-}
-.dancing span:nth-child(1){
-  animation-delay: .1s;
-}*/
-.dancing{
-  text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 15px #0ff, 0 0 20px #0ff;
-  font-weight: bold;
-            transition: all 0.3s ease-in-out;
-            animation: pulse-glow 1.5s infinite alternate;
-        }
 
         /* Define the pulse-glow animation */
         @keyframes pulse-glow {
@@ -381,6 +347,7 @@ margin: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+     height: 100vh;
 }
 .slider .list .item{
     position: absolute;
