--- a/style.css
+++ b/style.css
@@ -943,11 +943,12 @@ header nav a{
 /* About section*/
 
 #myabout{
-    width: 100%;
-    height: 100vh;
-    display: absolute;
-    object-fit: cover;
-    z-index: -1;
+    position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+     height: 100vh;
     
 }
 
