--- a/style.css
+++ b/style.css
@@ -964,11 +964,11 @@ header nav a{
   /* Add padding and margins to create space around your content */
 /*  padding: 50px;
   /* Add a semi-transparent background to make the text stand out */
-/*  background: rgba(0, 0, 0, 0.5); 
+ /* background: rgba(0, 0, 0, 0.5); 
   color: white; /* Make the text color light */
   /* Ensure the content is on top of the video */
-  /*z-index: 1;
-}*/
+ /* z-index: 1;
+}
 
 /* Optional: Hide the video on smaller screens for better performance */
 /*@media (max-width: 768px) {
@@ -1035,6 +1035,14 @@ header nav a{
 
 /* about*/
 .about {
+    position: relative;
+  /* Add padding and margins to create space around your content */
+  padding: 50px;
+  /* Add a semi-transparent background to make the text stand out */
+  background: rgba(0, 0, 0, 0.5); 
+  color: white; /* Make the text color light */
+  /* Ensure the content is on top of the video */
+  z-index: 1;
   display: flex;
   flex-direction: column; /* Stack elements vertically on mobile */
   align-items: center;
