--- a/style.css
+++ b/style.css
@@ -946,8 +946,8 @@ header nav a{
 #myabout {
   /* Fix the video position so it stays in the background */
   position: fixed;
-  right: 0;
-  bottom: 0;
+ /* right: 0;
+  bottom: 0;*/
   min-width: 100%;
   min-height: 100%;
   width: auto;
@@ -1036,11 +1036,6 @@ header nav a{
 /* about*/
 .about {
     position: relative;
-  /* Add padding and margins to create space around your content */
-  padding: 50px;
-  /* Add a semi-transparent background to make the text stand out */
-  background: rgba(0, 0, 0, 0.5); 
-  color: white; /* Make the text color light */
   /* Ensure the content is on top of the video */
   z-index: 1;
   display: flex;
